--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	compileOnly 'org.springframework.boot:spring-boot-starter-mustache'
+	compileOnly 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	annotationProcessor 'org.projectlombok:lombok:1.18.10'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
