add naver key setting

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,15 @@
 spring.security.oauth2.client.registration.google.clientId=526719702223-sulidmprhmhq3d2u26k2g9fafulhjlvr.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+spring.security.oauth2.client.registration.naver.clientId=_m_2nxD3CuycTggRlHaq
+spring.security.oauth2.client.registration.naver.clientSecret=CrS7c9XBEK
+spring.security.oauth2.client.registration.naver.redirectUri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorizationGrantType=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.clientName=Naver
+
+spring.security.oauth2.client.provider.naver.authorizationUri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.tokenUri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.userInfoUri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.userNameAttribute=response
