--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.profiles.include=oauth
-
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
